--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "bower-tcb-cedit",
+  "name": "spytext",
   "version": "0.0.0",
-  "main": "js/cedit.js",
+  "main": "js/spytext.js",
   "authors": [
     "Niklas Strandberg <niklas.strandberg@thecodebureau.com>"
   ],
