--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,13 @@
   "version": "0.0.2",
   "main": "js/spytext.js",
   "authors": [
-    "Niklas Strandberg <niklas.strandberg@thecodebureau.com>"
+    "Niklas Strandberg <niklas.strandberg@thecodebureau.com>",
+    "Linus Miller <linus.miller@thecodebureau.com>"
   ],
   "ignore": ["bower_components/*"],
   "dependencies": {
     "font-awesome": "~4.1.0",
     "jquery": ">2.0.0",
     "lodash": "~2.4.1",
-    "rangy": "~1.2.3"
   }
 }
