--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "font-awesome": "~4.1.0",
     "jquery": ">2.0.0",
-    "lodash": "~2.4.1",
+    "lodash": "~2.4.1"
   }
 }
