added missing bower dependencies

--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,13 @@
     "Niklas Strandberg <niklas.strandberg@thecodebureau.com>",
     "Linus Miller <linus.miller@thecodebureau.com>"
   ],
-  "ignore": ["bower_components/*"],
+  "ignore": [
+    "bower_components/*"
+  ],
   "dependencies": {
-    "jquery": ">1.10.0",
-    "lodash": "~2.4.1"
+    "jquery": "~2.1.1",
+    "lodash": "~2.4.1",
+    "font-awesome": "~4.1.0",
+    "rangy": "~1.2.3"
   }
 }
