Removed unneeded dependancies and finished change so that you can use jqLite instead of jQuery.

--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,6 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "lodash": "~2.4.1",
-    "font-awesome": "~4.1.0",
-    "rangy": "~1.2.3"
+    "lodash": "~2.4.1"
   }
 }
