Changed folder structure, moved spytext-angular into own bower package and reset version to 0.0.0, and removed saved.js.

--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,10 @@
 {
   "name": "spytext",
-  "version": "0.2.0",
+  "version": "0.0.0",
   "main": [
-    "./js/spytext.js",
-    "./js/spytext-angular.js"
+    "dist/spytext.js"
   ],
   "authors": [
-    "Niklas Strandberg <niklas.strandberg@thecodebureau.com>",
     "Linus Miller <linus.miller@thecodebureau.com>"
   ],
   "ignore": [
