--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,10 @@
     "bower_components/*"
   ],
   "dependencies": {
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "mod": "~0.1.0",
+    "selectron": "~0.0.0",
+    "snapback": "~0.0.0",
+    "mod-manipulation": "~0.0.0"
   }
 }
