--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tcb-spytext",
   "version": "0.2.0-pre",
   "description": "## Why ?",
-  "main": "./lib/index.js",
+  "main": "./lib/spytext.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
