--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/thecodebureau/spytext",
   "dependencies": {
-    "tcb-fork-lodash": "file:../../../../../tmp/npm-8417-199f3be0/1417285956857-0.7498953049071133/c0e2253572448ce7e6455d2fef48d9150cbd0c75"
+    "tcb-fork-lodash": "thecodebureau/fork-lodash#sup3rman",
+    "tcb-mod": "thecodebureau/mod",
+    "tcb-snapback": "thecodebureau/snapback"
   }
 }
