--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcb-spytext",
-  "version": "0.2.1",
+  "version": "0.3.0-pre",
   "description": "## Why ?",
   "main": "./lib/spytext.js",
   "scripts": {
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/thecodebureau/spytext",
   "dependencies": {
-    "tcb-fork-lodash": "^2.5.0",
     "tcb-mod": "^0.3.0",
     "tcb-snapback": "^0.2.1"
   }
