--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spytext",
-  "version": "0.4.2",
-  "description": "## Why ?",
-  "main": "./spytext.js",
+  "version": "0.5.0-alpha",
+  "description": "Why? Because there is nothing like it.",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +16,7 @@
     "url": "https://github.com/thecodebureau/spytext/issues"
   },
   "homepage": "https://github.com/thecodebureau/spytext",
-  "dependencies": {
-    "snapback": "^0.3.0"
+  "peerDependencies": {
+    "jquery-ancestors": "^0.1.0"
   }
 }
