--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/thecodebureau/spytext/issues"
   },
-  "homepage": "https://github.com/thecodebureau/spytext",
-  "peerDependencies": {
-    "jquery-ancestors": "^0.1.0"
-  }
+  "homepage": "https://github.com/thecodebureau/spytext"
 }
