--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/thecodebureau/spytext",
   "dependencies": {
     "descendants": "^0.0.1",
+    "lodash": "^4.6.1",
     "selektr": "^0.0.1",
     "snapback": "^0.4.0"
   }
