--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
 	},
 
 	"rules": {
+		"no-case-declarations": 0,
+		"default-case": 0,
+		"no-fallthrough": 0,
 		"no-cond-assign": 0,
 		"one-var": 0,
 		"prefer-rest-params": 0,
