--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
 		"prefer-arrow-callback": 0,
 		"array-bracket-spacing": 0,
 		"no-console": 0,
-		"indent": [ 2, "tab", { "SwitchCase": 1 }],
+		"indent": [ 2, 2, { "SwitchCase": 1 }],
 		"max-len": 0,
 		"comma-dangle": 0,
 		"no-param-reassign": 0,
