--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
 	},
 
 	"rules": {
+    "no-fallthrough": 0,
+    "object-shorthand": 0,
     "import/no-unresolved": 0,
     "no-case-declarations": 0,
     "global-require": 0,
