Changed CommonJS build folder to cjs

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "spytext",
   "version": "0.8.0-alpha.5",
   "description": "Why? Because there is nothing like it.",
-  "main": "lib/spytext.js",
+  "main": "cjs/spytext.js",
   "js:next": "es/spytext.js",
   "scripts": {
-    "clean": "rimraf es lib dist",
+    "clean": "rimraf es cjs dist",
     "lint": "eslint src",
     "build": "npm run build:cjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "build:cjs": "BABEL_ENV=cjs babel src --out-dir lib",
+    "build:cjs": "BABEL_ENV=cjs babel src --out-dir cjs",
     "build:es": "BABEL_ENV=es babel src --out-dir es",
     "build:umd": "mkdir -p dist && BABEL_ENV=es rollup -c -o dist/spytext.js",
     "build:umd:min": "mkdir -p dist && BABEL_ENV=es rollup -c | uglifyjs -c -m > dist/spytext.min.js",
