--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
   },
   "homepage": "https://github.com/thecodebureau/spytext",
   "dependencies": {
-    "dollr": "0.0.9",
-    "lodash": "^4.15.0",
+    "dollr": "^0.1.0",
+    "lodash": "^4.16.4",
     "object-assign": "^4.1.0",
-    "selektr": "0.1.1",
+    "selektr": "^0.1.2",
     "snapback": "^0.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
+    "babel-cli": "^6.16.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb-base": "^5.0.3",
-    "eslint-plugin-import": "^1.14.0",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.0.1",
     "rimraf": "^2.5.4",
-    "rollup": "^0.34.10",
+    "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^3.3.1",
+    "rollup-plugin-commonjs": "^5.0.5",
     "rollup-plugin-node-resolve": "^2.0.0",
     "uglify-js": "^2.7.3"
   }
