--- a/.eslintrc
+++ b/.eslintrc
@@ -2,37 +2,19 @@
   "extends": "airbnb-base",
 
   "rules": {
-    "no-mixed-operators": 0,
-    "no-cond-assign": 0,
-    "no-fallthrough": 0,
-    "object-shorthand": 0,
-    "import/no-unresolved": 0,
-    "no-case-declarations": 0,
-    "global-require": 0,
-    "no-underscore-dangle": 0,
-    "default-case": 0,
-    "one-var": 0,
-    "prefer-rest-params": 0,
-    "no-unused-vars": [ 2, { "args": "none" } ],
-    "no-alert": 0,
-    "quote-props": 0,
-    "no-nested-ternary": 0,
-    "no-use-before-define": [2, { "functions": false, "classes": true }],
+    "arrow-parens": [2, "always"],
     "consistent-return": 0,
-    "no-eval": 0,
-    "prefer-arrow-callback": 0,
-    "array-bracket-spacing": 0,
-    "no-console": 0,
-    "indent": [ 2, 2, { "SwitchCase": 1 }],
-    "max-len": 0,
-    "comma-dangle": 0,
-    "no-param-reassign": 0,
-    "prefer-template": 0,
-    "curly": 0,
     "func-names": 0,
+    "import/no-unresolved": [2, { "ignore": ["^[^./]"] }],
+    "no-cond-assign": 0,
+    "no-console": [1, { "allow": ["warn", "error", "info"] }],
+    "no-empty": [2, { "allowEmptyCatch": true }],
+    "no-mixed-operators": 0,
+    "no-param-reassign": 0,
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true } ],
     "no-shadow": 0,
-    "spaced-comment": 0,
-    "strict": [ 2, "global" ]
+    "no-underscore-dangle": 0,
+    "no-use-before-define": [2, { "functions": false }]
   },
 
   "env": {
