--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spytext",
-  "version": "0.8.0-alpha.6",
+  "version": "0.8.0",
   "description": "Why? Because there is nothing like it.",
   "main": "cjs/spytext.js",
   "js:next": "es/spytext.js",
