--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,15 @@
 {
   "extends": "airbnb-base",
 
+  "env": {
+    "browser": true
+  },
+
   "rules": {
     "arrow-parens": [2, "always"],
     "consistent-return": 0,
     "func-names": 0,
+    "import/no-extraneous-dependencies": 0,
     "import/no-unresolved": [2, { "ignore": ["^[^./]"] }],
     "no-cond-assign": 0,
     "no-console": [1, { "allow": ["warn", "error", "info"] }],
@@ -15,9 +20,5 @@
     "no-shadow": 0,
     "no-underscore-dangle": 0,
     "no-use-before-define": [2, { "functions": false }]
-  },
-
-  "env": {
-    "browser": true
   }
 }
