--- a/package.json
+++ b/package.json
@@ -26,25 +26,26 @@
   },
   "homepage": "https://github.com/thecodebureau/spytext",
   "dependencies": {
-    "dollr": "^0.1.0",
-    "lodash": "^4.16.4",
-    "object-assign": "^4.1.0",
-    "selektr": "^0.1.2",
-    "snapback": "^0.6.1"
+    "dollr": "^0.1.1",
+    "lodash": "^4.17.4",
+    "lowline": "^0.1.3",
+    "object-assign": "^4.1.1",
+    "selektr": "^0.1.4",
+    "snapback": "^0.7.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
+    "babel-cli": "^6.22.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-es2015-rollup": "^1.2.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-plugin-import": "^2.0.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
     "rimraf": "^2.5.4",
-    "rollup": "^0.36.3",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "uglify-js": "^2.7.3"
+    "uglify-js": "^2.7.5"
   }
 }
