--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,9 @@
 {
-  "extends": "airbnb-base",
+  "root": true,
+
+  "extends": ["standard", "prettier"],
 
   "env": {
     "browser": true
-  },
-
-  "rules": {
-    "arrow-parens": [2, "always"],
-    "consistent-return": 0,
-    "func-names": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-unresolved": [2, { "ignore": ["^[^./]"] }],
-    "no-cond-assign": 0,
-    "no-console": [1, { "allow": ["warn", "error", "info"] }],
-    "no-empty": [2, { "allowEmptyCatch": true }],
-    "no-mixed-operators": 0,
-    "no-param-reassign": 0,
-    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
-    "no-shadow": 0,
-    "no-underscore-dangle": 0,
-    "no-use-before-define": [2, { "functions": false }]
   }
 }
