--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "spytext",
   "version": "0.9.3",
   "description": "Why? Because there is nothing like it.",
-  "main": "cjs/spytext.js",
-  "jsnext:main": "es/spytext.js",
+  "exports": "src/spytext.js",
+  "module": "src/spytext.js",
   "scripts": {
-    "clean": "rimraf es cjs dist",
-    "lint": "eslint src",
     "build": "npm run build:cjs && npm run build:es && npm run build:umd && npm run build:umd:min",
     "build:cjs": "BABEL_ENV=cjs babel src --out-dir cjs",
     "build:es": "BABEL_ENV=es babel src --out-dir es",
-    "build:umd": "mkdir -p dist && BABEL_ENV=es rollup -c -o dist/spytext.js",
-    "build:umd:min": "mkdir -p dist && BABEL_ENV=es rollup -c | uglifyjs -c -m > dist/spytext.min.js",
+    "build:umd": "BABEL_ENV=es rollup -c",
+    "build:umd:min": "BABEL_ENV=es rollup -c rollup.config.minify.mjs",
+    "clean": "rimraf es cjs dist",
+    "lint": "eslint --ext .cjs,.js,.mjs .",
     "format": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run clean && npm run lint && npm run build"
@@ -27,25 +27,27 @@
   },
   "homepage": "https://github.com/thecodebureau/spytext",
   "dependencies": {
-    "dollr": "^0.1.2",
+    "domp": "^0.7.2",
     "lodash": "^4.17.4",
-    "lowline": "^0.1.3",
-    "selektr": "^0.1.5",
-    "snapback": "^0.7.0"
+    "lowline": "^0.4.2",
+    "selektr": "^0.3.1",
+    "snapback": "^0.8.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "uglify-js": "^2.8.22"
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.3.0"
   }
 }
