upgrade deps and simplify build process
- do not use babel at all
- use src files for everything except unpkg

--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "spytext",
   "version": "0.9.3",
   "description": "Why? Because there is nothing like it.",
+  "type": "module",
   "exports": "src/spytext.js",
-  "module": "src/spytext.js",
+  "unpkg": "dist/spytext.min.js",
   "scripts": {
-    "build": "npm run build:cjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "build:cjs": "BABEL_ENV=cjs babel src --out-dir cjs",
-    "build:es": "BABEL_ENV=es babel src --out-dir es",
-    "build:umd": "BABEL_ENV=es rollup -c",
-    "build:umd:min": "BABEL_ENV=es rollup -c rollup.config.minify.mjs",
-    "clean": "rimraf es cjs dist",
+    "build": "rollup -c",
+    "clean": "rimraf dist",
     "lint": "eslint --ext .cjs,.js,.mjs .",
     "format": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,27 +24,21 @@
   },
   "homepage": "https://github.com/lohfu/spytext",
   "dependencies": {
-    "domp": "^0.7.2",
-    "lodash": "^4.17.4",
+    "domp": "^0.8.0",
     "lowline": "^0.4.2",
     "selektr": "^0.3.1",
     "snapback": "^0.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-babel": "^6.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.1.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-n": "^15.5.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^3.3.0"
+    "rimraf": "^5.0.5",
+    "rollup": "^4.5.0"
   }
 }
